--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,21 @@
 Package: placeholder
 Type: Tutorial
-Title: Workshop 10
-Version: 0.0.1
+Title: QCBS R Workshop 10
+Version: 0.1.0
 Authors@R: c(
   person("Team", "QCBS", role = c("aut", "cre"), email = "kevin.cazelles@gmail.com")
   )
 Imports:
+  ade4,
   vegan,
   MASS,
   labdsv,
   devtools,
-  fBasics,
-  ade4,
+  mvpart,
+  MVPARTwrap,
   qcbsRworkshops,
   xaringan
 Remotes:
-  QCBSRworkshops/qcbsRworkshops
+  QCBSRworkshops/qcbsRworkshops,
+  cran/mvpart,
+  cran/MVPARTwrap
