--- a/.github/workflows/deploy_pres-en.yml
+++ b/.github/workflows/deploy_pres-en.yml
@@ -48,6 +48,11 @@ jobs:
 
       - name: 💻 Install pandoc and pandoc citeproc
         uses: r-lib/actions/setup-pandoc@v1
+        
+      - name: Install cURL Headers, UNITS, SSL, SSH2, PQ, 1g
+        run: |
+          sudo apt-get install libcurl4-openssl-dev libudunits2-dev 
+          libssl-dev libssh2-1-dev libpq-dev zlib1g-dev
     
       - name: 💻 Install R packages and dependencies if needed
         run: |
