--- a/.github/workflows/deploy_pres-en.yml
+++ b/.github/workflows/deploy_pres-en.yml
@@ -68,7 +68,16 @@ jobs:
                   
       - name: 🧶 Render presentation
         run: Rscript -e 'rmarkdown::render("workshop10-pres-en.Rmd")'
-        
+
+      - name: 📜 Create script using purl
+        run: |
+         Rscript -e 'knitr::purl("workshop10-pres-en.Rmd",documentation = 0,output = "workshop10-script-en.R");
+         script <- readLines("workshop10-script-en.R");
+         script <- gsub("## ", "", script);
+         script <- script[-(1:12)];
+         write(script, file = "workshop10-script-en.R");
+         file.copy("workshop10-script-en.R", "_pres/")'
+
       - name: 🔺 Upload artifact containing the presentation
         uses: actions/upload-artifact@v1
         with:
