--- a/.github/workflows/deploy_book-en.yml
+++ b/.github/workflows/deploy_book-en.yml
@@ -120,11 +120,11 @@ jobs:
          path: book-en/ # optional
 
       - name: 💎 Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: book-en/_book/
-          TARGET_FOLDER: book-en # The folder the action should deploy
-          CLEAN: true
+          token: ${{ secrets.ACCESS_TOKEN }}
+          branch: gh-pages # The branch the action should deploy to.
+          folder: book-en/
+          target-folder: book-en # The folder the action should deploy
+          clean: true
 
