--- a/.github/workflows/deploy_book-en.yml
+++ b/.github/workflows/deploy_book-en.yml
@@ -124,7 +124,7 @@ jobs:
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages # The branch the action should deploy to.
-          folder: book-en/
+          folder: book-en/_book/
           target-folder: book-en # The folder the action should deploy
           clean: true
 
